--- a/pages/frey.html
+++ b/pages/frey.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Refugio Frey</title>
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
-    <header>
+    <section class="container">    <header>
         
         <a href="../index.html">
             <img src="../multimedia/pa proyecto img.jpg" alt="logo" class="logo">
         </a>
             <h1>
-        FREY
+        <img src="../multimedia/logo-refugio-frey-negro-1024x525.png" alt="logofrey">
         </h1>
         <div class="refugios">
                     <a href="../pages/frey.html">
@@ -25,11 +25,50 @@
         <a href="../pages/hielo-azul.html">
             <img src="../multimedia/Refugio-hielo-azul-2_11zon.webp" alt="hielo-azul" class="hielo">
         </a>
-        <a href="../pages/la-playita.html">
-            <img src="../multimedia/la-playita-1.jpg" alt="playita" class="playita">
+        <a href="../pages/casadecampo.html">
+            <img src="../multimedia/PARA LOGO CASA.jpg" alt="casa-de-campo" class="casa">
         </a>
         </div>
-
-        </header>
+        <div class="infofrey">
+        <p>
+            El refugio Emilio Frey está ubicado dentro del Parque Nacional Nahuel Huapi en la zona sur del macizo del Cerro Catedral. Rodeado de torres de granito y a orillas de la laguna Toncek, se encuentra a una altitud de 1700 metros sobre el nivel del mar.
+        </p>
+        <p>
+            El refugio es uno de los más pintorescos de la región. Una verdadera obra maestra del tallado en granito: dinteles, antepechos, aristas y otros detalles de gran calidad lograron que el edificio no desentonara con el paisaje.En los alrededores del refugio, innumerables torres de roca granodiorítica ofrecen inmejorables posibilidades para la práctica de la escalada tradicional. Deportistas locales, nacionales e internacionales concurren todos los veranos para escalar vías de calidad y complejidad. Una parte importante de la historia del montañismo nacional se desarrolló y se mantiene viva en Frey.
+Durante el invierno y parte de la primavera, el refugio se ha convertido también en una de las áreas más utilizadas por profesionales y aficionados para la práctica del esquí de travesía.
+        </p>
+        <p>
+            El acceso principal al refugio parte de la base del centro de esquí. El trayecto es de 10 km de longitud con un desnivel positivo de 700 mts. Durante el verano, el sendero es de complejidad media. Se accede solamente a pie. Se encuentra en un área agreste, por lo que el acceso de equipos de rescate suele demorar varias horas. La comunicación telefónica es parcial (sólo la primera mitad del recorrido). Durante el invierno, debido a la acumulación de hielo y nieve, el sendero se convierte en un terreno más complejo y peligroso. Se recomienda contratar un guía de montaña habilitado.
+        </p>
+        <p>
+            El refugio se encuentra abierto todo el año. Los servicios que se ofrecen incluyen pernocte, media pensión y pensión completa, con opciones de platos vegetarianos, veganos y una variedad de bebidas y vinos. 
+        </p>
+        </div>
+        </header></section>
+    <section class="containerIMAGENES mx-auto d-block">
+        <main class="container-fluid">
+            <img src="../multimedia/FREY1.webp" alt="frey1" class="img-fluid a item">
+            <img src="../multimedia/FREY2.jpg" alt="frey2" class="img-fluid b item"> 
+            <img src="../multimedia/FREY3.webp" alt="frey3" class="img-fluid c item">
+            <img src="../multimedia/FREY4.webp" alt="frey4" class="img-fluid d item">
+            <img src="../multimedia/FREY5.jpg" alt="frey5" class="img-fluid e item">
+            <img src="../multimedia/FREY 6.webp" alt="frey6" class="img-fluid f item">
+            <img src="../multimedia/el-refugio.webp" alt="frey7" class="img-fluid g item">
+            <img src="../multimedia/FREY8.jpg" alt="frey8" class="img-fluid h item">
+        </main>
+    </section>
+    <section class="container-fluid mx-auto d-block">
+    <footer class="footer">
+        <h1>REDES Y CONTACTOS DEL REFUGIO</h1>
+        <div class="redes">
+        <a href="https://www.facebook.com/people/Refugio-Frey">
+        <img src="../multimedia/facebook.png" alt="facebook" class="facebook">
+        </a>
+        <a href="https://www.instagram.com/refugio.frey">
+        <img src="../multimedia/instagram.png" alt="instagram" class="instagram">
+        </a>
+        </div>
+    </footer>
+</section>
 </body>
 </html>
