--- a/pages/hielo-azul.html
+++ b/pages/hielo-azul.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>Document</title>
+    <title>HIELO AZUL</title>
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
         </a>
     
             <h1>
-            HIELO AZUL
+            <img src="../multimedia/portadin.png" alt="">
         </h1>
     <div class="refugios">
         <a href="../pages/frey.html">
@@ -26,11 +26,39 @@
         <a href="../pages/hielo-azul.html">
             <img src="../multimedia/Refugio-hielo-azul-2_11zon.webp" alt="hielo-azul" class="hielo">
         </a>
-        <a href="../pages/la-playita.html">
-            <img src="../multimedia/la-playita-1.jpg" alt="playita" class="playita">
+        <a href="../pages/casadecampo.html">
+            <img src="../multimedia/PARA LOGO CASA.jpg" alt="casa-de-campo" class="casa">
         </a>
     </div>
 
+    <div class="infohielo">
+        <P>El Hielo Azul en El Bolsón es un área de trekking popular con un refugio de montaña y el glaciar Hielo Azul. El refugio, ubicado a 1350 metros de altura, pertenece al Club Andino Piltriquitrón. Se puede llegar a él a través de senderos que comienzan en el Camping Doña Rosa o desde el área de confluencia de los ríos Encanto Blanco y Azul. </P>
+        <P>El refugio Hielo Azul ofrece servicios como camping (con calentador), cena, comida rápida, y alojamiento con colchón (requiere llevar bolsa de dormir). Desde el refugio, es posible realizar el ascenso al glaciar Hielo Azul, un recorrido que implica subir rocas y pendientes, con un tramo de subida inicial fuerte y luego con grado de dificultad decreciente. </P>
+        <P> Para llegar al refugio y al glaciar, se recomienda llevar agua, ropa adecuada para el clima frío, y estar preparado para un camino que incluye pasarelas sobre ríos y tramos de subida empinada. El área también cuenta con otros senderos, como el que va al Cajón del Azul, que implica un descenso técnico y abrupto. </P>
+    </div>
         </header>
+
+    <main>
+        <img src="../multimedia/hielo1.jpeg" alt="hielo1" class="p item">
+        <img src="../multimedia/hielo2.webp" alt="hielo2" class="q item"> 
+        <img src="../multimedia/hielo3.jpg" alt="hielo3" class="r item">
+        <img src="../multimedia/hielo4.webp" alt="hielo4" class="s item">
+        <img src="../multimedia/hielo5.jpg" alt="hielo5" class="t item">
+        <img src="../multimedia/hielo6.jpeg" alt="hielo6" class="u item">
+        <img src="../multimedia/hielo7.jpg" alt="hielo7" class="v item">
+        <img src="../multimedia/hielo8.webp" alt="hielo8" class="w item">
+    </main>
+    <footer>
+        <h1>REDES Y CONTACTOS DEL REFUGIO</h1>
+        <div class="redes">
+            <a href="https://www.facebook.com/people/Refugio-Hielo-Azu">
+    <img src="../multimedia/facebook.png" alt="facebook" class="facebook">
+    </a>
+    <a href="https://www.instagram.com/refugio_hielo_azul/?hl=es">
+    <img src="../multimedia/instagram.png" alt="instagram" class="instagram">
+    </a>
+    </div>
+    </footer>
+
 </body>
 </html>
