--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RefugiANDES</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
     <header>
     <a href="./index.html">
-        <img src="./multimedia/pa proyecto img.jpg" alt="logo" class="logo">
+        <img src="./multimedia/LOGO2.jpg" alt="logo" class="logo">
     </a>
 
         <h1>
-        ACA VA A DECIR REFUGIANDES
+        <img src="./multimedia/Adobe Express - file.png" alt="banner" class="banner mx-auto d-block img-fluid">
     </h1>
 <div class="refugios">
         <a href="./pages/frey.html">
@@ -25,17 +26,106 @@
     <a href="./pages/hielo-azul.html">
         <img src="./multimedia/Refugio-hielo-azul-2_11zon.webp" alt="hielo-azul" class="hielo">
     </a>
-    <a href="./pages/la-playita.html">
-        <img src="./multimedia/la-playita-1.jpg" alt="playita" class="playita">
+    <a href="./pages/casadecampo.html">
+        <img src="./multimedia/PARA LOGO CASA.jpg" alt="casa-de-campo" class="casa">
     </a>
 </div>
 
     </header>
     <main>
+<div id="carouselExampleIndicators" class="carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="./multimedia/jakob.jpg" class="d-block w-100 img" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="./multimedia/Refugio-hielo-azul-2_11zon.webp" class="d-block w-100 img" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="./multimedia/refugio-frey-bariloche.jpg" class="d-block w-100 img" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+<style>
+    .img{
+        height: 500px !important;
 
+    }
+</style>
+<p class="lh-1">Desde Refugiandes te entendemos, sabemos lo que es vivir en la ciudad y buscar un escape a la naturaleza.Queremos ayudarte, si es tu primera vez en un redugio y no sabes por donde arrancar, te traemos toda la informacion que necesitas.Aca vas a encontrar lo necesario para que tu viaje sea verdaderamente hermoso, puedas conectar con la naturaleza y desconectar de tus problemas</p>
+<p class="lh-sm">Diseñamos paginas especificas para cada refugio, de este modo vos vas a poder comparar entre ellos y decidir en base a su belleza o su cercania a tu ubicacion por cual te decidis, nosotros recomendamos que los CONOSCAS A TODOS, cada uno tiene su encanto y todos estan repletos de gente con buena onda y dispuesta a compartir sus historias con vos </p>
+<p class="lh-base">Animate a aventurarte en la naturaleza, nuestro pais tiene paisajes hermosos para descubrir y junto a ellos vas a conocer gente de todos los rincones de cada provicia Argentina y del exterior (no olvides que nuestra cordillera es conocida mundialmente) vas a encontrar anecdotas y compartir experiencias con gente como vos, date la oportunidad de conocer gente nueva y conocerte a vos mismo/a </p>
+<p class="lh-lg">Por ultimo pero no por eso menos importante, queremos darte tranquilidad, nuestro objetivo es que vos tengas todo al alcance de tu mano, que con solo unos clicks tengas todo la informacion necesaria para poder elegir tu destino, tu lugar en la montaña.A nosotros,como a vos, tambien nos encanta la naturaleza y por eso queremos darte todos los datos necesarios para que tu primera vez o si ya fuiste pero queres informarte antes de ir a conocer uno nuevo,sea lo mas sencillo y amigable posible.
+  Regalate este tiempo y espacio para vos, entra, compara y encontra el refugio ideal para vos,LA NATURALEZA TE ESPERA </p>
+<div class="accordion" id="accordionPanelsStayOpenExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+        ¿Quienes somos?
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+      <div class="accordion-body">
+        <strong>En Refugiandes somos como vos, somos personas que buscamos un escape del stress, la monotonia y los dolores de cabeza que genera la vida diaria en la ciudad,buscamos ayudarte a encontrar ese escape,queremos ser tu herramienta para saber por donde arrancar al momento de ir a un refugio a conectarte con la naturaleza,hacer actividad fisica y conocer muy buena gente.
+          Aca vas a encontrar toda la informacion que necesitas para visitar los mejores refugios que te ofrece nuestra hermosa Cordillera de los Andes.
+          Acompañanos y dejate maravillar por estos hermosos paisajes   
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+        ¿Que tener en cuenta al ir a algun refugio?
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+      <div class="accordion-body">
+        <strong>Planificacion,esa es la clave, sabemos que las escapadas suelen ser en feriados o dias libres en el trabajo,por eso, planifica bien tu destino.
+          Reserva tu lugar con tiempo,los refugios tienen lugares limitados,asegurate tu lugar con anticipacion o llevate tu carpa y pasa una noche envuelto de las noches mas hermosas que vas a vivir.
+          Si no contas con vehiculo, compra tu pasaje con tiempo, tenes que tener en cuenta que como vos, mucha genete busca escaparse los fin de semanas largos y/o feriados,para evitar falta de disponibilidad reserva tu pasaje con tiempo, ademas te sale mas economico ;)
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+        ¿Como me equipo para ir?
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+      <div class="accordion-body">
+        <strong>No subestimes la montaña,un buen calzado, buen abrigo, buena botella/cantinplora, buena carpa y buena mochila son cosas infaltables y con las que recomendamos no escatimar en gastos, la calidad de los elementos que lleves puede hacer una gran diferencia en tu trayecto hasta el refugio.
+          "CADA GRAMO CUENTA", el peso de tu mochila es muy importante, vas a caminar varias horas en caminos empinados, por eso si te sobrecargas vas a dificultarte tu llegada, evita llevar cosas innecesarias, lleva solo lo escencial para tu viaje, en los refugios podes comprar alimentos y bebidas, no lleves de mas,
+          "LO QUE SUBE CON VOS BAJA CON VOS" tu basura sube y baja con vos, cuidemos la montaña :)
+        
+      </div>
+    </div>
+  </div>
+</div>
     </main>
     <footer>
-    
+      <h1>CONOCENOS Y CONECTANOS</h1>
+      <div class="redes">
+    <img src="./multimedia/facebook.png" alt="facebook" class="facebook">
+    <img src="./multimedia/instagram.png" alt="instagram" class="instagram">
+    <img src="./multimedia/x.png" alt="x" class="x">
+    <img src="./multimedia/gmail.png" alt="mail" class="mail">
+    </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+
 </body>
 </html>
