--- a/pages/jakob.html
+++ b/pages/jakob.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JAKOB</title>
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
             <img src="../multimedia/pa proyecto img.jpg" alt="logo" class="logo">
         </a>
             <h1>
-            JAKOB
+            <img src="../multimedia/LOGO JAKOV PNG.png" alt="logojakov">
         </h1>
         <div class="refugios">
         <a href="../pages/frey.html">
@@ -24,11 +24,40 @@
         <a href="../pages/hielo-azul.html">
             <img src="../multimedia/Refugio-hielo-azul-2_11zon.webp" alt="hielo-azul" class="hielo">
         </a>
-        <a href="../pages/la-playita.html">
-            <img src="../multimedia/la-playita-1.jpg" alt="playita" class="playita">
+        <a href="../pages/casadecampo.html">
+            <img src="../multimedia/PARA LOGO CASA.jpg" alt="casa-de-campo" class="casa">
         </a>
         </div>
+        <div class="infojakov">
+            <p>El refugio Gral San Martín, más conocido como Refugio Jakob debido al lago que está a sus pies, está ubicado a 1600 metros sobre el nivel del mar. Fue construido a base de piedra y madera, a principios de los años cincuenta, y ampliado en sucesivas ocasiones. Actualmente la nueva edificación, tiene una capacidad para albergar cómodamente hasta 60 personas aproximadamente, cuenta con distintas habitaciones con vistas al lago y a los cerros cercanos</p>
+            <p>. El refugio ofrece un servicio de abundantes comidas caseras, cenas, desayunos y meriendas completas.</p>
+            <p>El sendero comienza en el Tambo Báez.La entrada al tambo se ubica sobre la RP79 (“camino viejo” a Colonia Suiza), a un kilómetro del puente vial sobre el arroyo Casa de Piedra.
+Al mismo se puede llegar en auto (hay estacionamiento pago en el lugar) o en colectivo y caminando.</p>
+<p>El refugio se encuentra abierto todo el año. Los servicios que se ofrecen incluyen pernocte, media pensión y pensión completa, con opciones de platos vegetarianos, veganos y una variedad de bebidas y vinos
+</p>
+        </div>
+    </header>
+<main>
+    <img src="../multimedia/jakov1.jpg" alt="frey1" class="i item">
+        <img src="../multimedia/jakov2.jpg" alt="frey2" class="j item"> 
+        <img src="../multimedia/jakov3.jpg" alt="frey3" class="k item">
+        <img src="../multimedia/jakov4.jpg" alt="frey4" class="l item">
+        <img src="../multimedia/jakov5.jpeg" alt="frey5" class="m item">
+        <img src="../multimedia/jakov6.jpg" alt="frey6" class="n item">
+        <img src="../multimedia/jakov7.jpg" alt="frey7" class="ñ item">
+        <img src="../multimedia/jakov8.jpg" alt="frey8" class="o item">
+</main>
 
-        </header>
+<footer>
+    <h1>REDES Y CONTACTOS DEL REFUGIO</h1>
+    <div class="redes">
+        <a href="https://www.instagram.com/refugiojakob/">
+    <img src="../multimedia/instagram.png" alt="instagram" class="instagram">
+    </a>
+    <a href="http://refugiojakob@gmail.com">
+    <img src="../multimedia/gmail.png" alt="mail" class="mail">
+    </a>
+    </div>
+</footer>
 </body>
 </html>
