--- a/pages/casadecampo.html
+++ b/pages/casadecampo.html
@@ -42,7 +42,7 @@ Sin vehículo: Desde El Bolsón, tomar en la plaza Pagano el transporte La Golon
         </p>
         </div>
         </header>
-        <main class="">
+        <main class="imagenes-casa">
         <img src="../multimedia/CASA1.jpg" alt="frey1" class="a1 item">
         <img src="../multimedia/CASA2.jpeg" alt="frey2" class="b1 item"> 
         <img src="../multimedia/CASA3.jpg" alt="frey3" class="c1 item">
