--- a/pages/frey.html
+++ b/pages/frey.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
-    <section class="container">    <header>
+    <header>
         
         <a href="../index.html">
             <img src="../multimedia/pa proyecto img.jpg" alt="logo" class="logo">
         </a>
             <h1>
-        <img src="../multimedia/logo-refugio-frey-negro-1024x525.png" alt="logofrey">
+        <img src="../multimedia/logo-refugio-frey-negro-1024x525.png" class="logofrey">
         </h1>
         <div class="refugios">
                     <a href="../pages/frey.html">
@@ -29,6 +29,8 @@
             <img src="../multimedia/PARA LOGO CASA.jpg" alt="casa-de-campo" class="casa">
         </a>
         </div>
+        </header>
+    <main>
         <div class="infofrey">
         <p>
             El refugio Emilio Frey está ubicado dentro del Parque Nacional Nahuel Huapi en la zona sur del macizo del Cerro Catedral. Rodeado de torres de granito y a orillas de la laguna Toncek, se encuentra a una altitud de 1700 metros sobre el nivel del mar.
@@ -43,21 +45,18 @@ Durante el invierno y parte de la primavera, el refugio se ha convertido tambié
         <p>
             El refugio se encuentra abierto todo el año. Los servicios que se ofrecen incluyen pernocte, media pensión y pensión completa, con opciones de platos vegetarianos, veganos y una variedad de bebidas y vinos. 
         </p>
+        </div class="imagenes-frey">
+            <img src="../multimedia/FREY1.webp" alt="frey1" class="a">
+            <img src="../multimedia/FREY2.jpg" alt="frey2" class="b"> 
+            <img src="../multimedia/FREY3.webp" alt="frey3" class="c">
+            <img src="../multimedia/FREY4.webp" alt="frey4" class="d">
+            <img src="../multimedia/FREY5.jpg" alt="frey5" class="e">
+            <img src="../multimedia/FREY 6.webp" alt="frey6" class="f">
+            <img src="../multimedia/el-refugio.webp" alt="frey7" class="g">
+            <img src="../multimedia/FREY8.jpg" alt="frey8" class="h">
         </div>
-        </header></section>
-    <section class="containerIMAGENES mx-auto d-block">
-        <main class="container-fluid">
-            <img src="../multimedia/FREY1.webp" alt="frey1" class="img-fluid a item">
-            <img src="../multimedia/FREY2.jpg" alt="frey2" class="img-fluid b item"> 
-            <img src="../multimedia/FREY3.webp" alt="frey3" class="img-fluid c item">
-            <img src="../multimedia/FREY4.webp" alt="frey4" class="img-fluid d item">
-            <img src="../multimedia/FREY5.jpg" alt="frey5" class="img-fluid e item">
-            <img src="../multimedia/FREY 6.webp" alt="frey6" class="img-fluid f item">
-            <img src="../multimedia/el-refugio.webp" alt="frey7" class="img-fluid g item">
-            <img src="../multimedia/FREY8.jpg" alt="frey8" class="img-fluid h item">
-        </main>
-    </section>
-    <section class="container-fluid mx-auto d-block">
+    </main>
+
     <footer class="footer">
         <h1>REDES Y CONTACTOS DEL REFUGIO</h1>
         <div class="redes">
