--- a/pages/hielo-azul.html
+++ b/pages/hielo-azul.html
@@ -39,6 +39,7 @@
         </header>
 
     <main>
+        <div class="imagenes-hielo">
         <img src="../multimedia/hielo1.jpeg" alt="hielo1" class="p item">
         <img src="../multimedia/hielo2.webp" alt="hielo2" class="q item"> 
         <img src="../multimedia/hielo3.jpg" alt="hielo3" class="r item">
@@ -47,6 +48,7 @@
         <img src="../multimedia/hielo6.jpeg" alt="hielo6" class="u item">
         <img src="../multimedia/hielo7.jpg" alt="hielo7" class="v item">
         <img src="../multimedia/hielo8.webp" alt="hielo8" class="w item">
+        </div>
     </main>
     <footer>
         <h1>REDES Y CONTACTOS DEL REFUGIO</h1>
