--- a/pages/jakob.html
+++ b/pages/jakob.html
@@ -28,7 +28,7 @@
             <img src="../multimedia/PARA LOGO CASA.jpg" alt="casa-de-campo" class="casa">
         </a>
         </div>
-        <div class="infojakov">
+        <div class="infojakob">
             <p>El refugio Gral San Martín, más conocido como Refugio Jakob debido al lago que está a sus pies, está ubicado a 1600 metros sobre el nivel del mar. Fue construido a base de piedra y madera, a principios de los años cincuenta, y ampliado en sucesivas ocasiones. Actualmente la nueva edificación, tiene una capacidad para albergar cómodamente hasta 60 personas aproximadamente, cuenta con distintas habitaciones con vistas al lago y a los cerros cercanos</p>
             <p>. El refugio ofrece un servicio de abundantes comidas caseras, cenas, desayunos y meriendas completas.</p>
             <p>El sendero comienza en el Tambo Báez.La entrada al tambo se ubica sobre la RP79 (“camino viejo” a Colonia Suiza), a un kilómetro del puente vial sobre el arroyo Casa de Piedra.
@@ -38,14 +38,16 @@ Al mismo se puede llegar en auto (hay estacionamiento pago en el lugar) o en col
         </div>
     </header>
 <main>
-    <img src="../multimedia/jakov1.jpg" alt="frey1" class="i item">
-        <img src="../multimedia/jakov2.jpg" alt="frey2" class="j item"> 
-        <img src="../multimedia/jakov3.jpg" alt="frey3" class="k item">
-        <img src="../multimedia/jakov4.jpg" alt="frey4" class="l item">
-        <img src="../multimedia/jakov5.jpeg" alt="frey5" class="m item">
-        <img src="../multimedia/jakov6.jpg" alt="frey6" class="n item">
-        <img src="../multimedia/jakov7.jpg" alt="frey7" class="ñ item">
-        <img src="../multimedia/jakov8.jpg" alt="frey8" class="o item">
+    <div class="imagenes-jakob">
+    <img src="../multimedia/jakov1.jpg" alt="frey1" class="i">
+        <img src="../multimedia/jakov2.jpg" alt="frey2" class="j"> 
+        <img src="../multimedia/jakov3.jpg" alt="frey3" class="k">
+        <img src="../multimedia/jakov4.jpg" alt="frey4" class="l">
+        <img src="../multimedia/jakov5.jpeg" alt="frey5" class="m">
+        <img src="../multimedia/jakov6.jpg" alt="frey6" class="n">
+        <img src="../multimedia/jakov7.jpg" alt="frey7" class="ñ">
+        <img src="../multimedia/jakov8.jpg" alt="frey8" class="o">
+    </div>
 </main>
 
 <footer>
