--- a/pages/casadecampo.html
+++ b/pages/casadecampo.html
@@ -5,29 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CASA DE CAMPO</title>
     <link rel="stylesheet" href="../styles/styles.css">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <a href="../index.html">
-            <img src="../multimedia/pa proyecto img.jpg" alt="logo" class="logo">
+            <img src="../multimedia/LOGO2.jpg" alt="logo" class="logo">
         </a>
     
             <h1>
-            <img src="../multimedia/logo casa de campo.png" alt="">
+            <img src="../multimedia/logo casa de campo.png" data-aos="flip-up" alt="">
         </h1>
 
         <div class="refugios">
         <a href="../pages/frey.html">
-            <img src="../multimedia/refugio-frey-bariloche.jpg" alt="frey" class="frey">
+            <img src="../multimedia/refugio-frey-bariloche.jpg" data-aos="flip-up" alt="frey" class="frey">
         </a>
         <a href="../pages/jakob.html">
-            <img src="../multimedia/jakob.jpg" alt="jakob" class="jakob">
+            <img src="../multimedia/jakob.jpg" alt="jakob" data-aos="flip-up" class="jakob">
         </a>
         <a href="../pages/hielo-azul.html">
-            <img src="../multimedia/Refugio-hielo-azul-2_11zon.webp" alt="hielo-azul" class="hielo">
+            <img src="../multimedia/Refugio-hielo-azul-2_11zon.webp" data-aos="flip-up" alt="hielo-azul" class="hielo">
         </a>
         <a href="../pages/casadecampo.html">
-        <img src="../multimedia/PARA LOGO CASA.jpg" alt="casa-de-campo" class="casa">
+        <img src="../multimedia/PARA LOGO CASA.jpg" alt="casa-de-campo" data-aos="flip-up" class="casa">
         </a>
         </div>
         <div class="infocasa">
@@ -43,16 +44,16 @@ Sin vehículo: Desde El Bolsón, tomar en la plaza Pagano el transporte La Golon
         </div>
         </header>
         <main class="imagenes-casa">
-        <img src="../multimedia/CASA1.jpg" alt="frey1" class="a1 item">
-        <img src="../multimedia/CASA2.jpeg" alt="frey2" class="b1 item"> 
-        <img src="../multimedia/CASA3.jpg" alt="frey3" class="c1 item">
-        <img src="../multimedia/CASA4.jpeg" alt="frey4" class="d1 item">
-        <img src="../multimedia/CASA5.webp" alt="frey5" class="e1 item">
-        <img src="../multimedia/CASA6.jpeg" alt="frey6" class="f1 item">
-        <img src="../multimedia/CASA7.jpeg" alt="frey7" class="g1 item">
-        <img src="../multimedia/CASA8.webp" alt="frey8" class="h1 item">
+        <img src="../multimedia/CASA1.jpg"  data-aos="zoom-in-down" alt="frey1" class="a1 item">
+        <img src="../multimedia/CASA2.jpeg" data-aos="zoom-in-down" alt="frey2" class="b1 item"> 
+        <img src="../multimedia/CASA3.jpg" data-aos="zoom-in-down" alt="frey3" class="c1 item">
+        <img src="../multimedia/CASA4.jpeg" data-aos="zoom-in-down" alt="frey4" class="d1 item">
+        <img src="../multimedia/CASA5.webp" data-aos="zoom-in-down" alt="frey5" class="e1 item">
+        <img src="../multimedia/CASA6.jpeg" data-aos="zoom-in-down" alt="frey6" class="f1 item">
+        <img src="../multimedia/CASA7.jpeg" data-aos="zoom-in-down" alt="frey7" class="g1 item">
+        <img src="../multimedia/CASA8.webp" data-aos="zoom-in-down" alt="frey8" class="h1 item">
         </main>
-</body>
+
 <footer>
     <h1>CONTACTOS Y REDES DEL REFUGIO</h1>
     <div class="redes">
@@ -64,4 +65,9 @@ Sin vehículo: Desde El Bolsón, tomar en la plaza Pagano el transporte La Golon
     </a>
     </div>
 </footer>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+        AOS.init();
+</script>
+</body>
 </html>
