--- a/pages/frey.html
+++ b/pages/frey.html
@@ -5,28 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Refugio Frey</title>
     <link rel="stylesheet" href="../styles/styles.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header>
-        
         <a href="../index.html">
-            <img src="../multimedia/pa proyecto img.jpg" alt="logo" class="logo">
+            <img src="../multimedia/LOGO2.jpg" alt="logo" class="logo">
         </a>
             <h1>
-        <img src="../multimedia/logo-refugio-frey-negro-1024x525.png" class="logofrey">
+        <img src="../multimedia/logo-refugio-frey-negro-1024x525.png" data-aos="flip-up" class="logofrey">
         </h1>
         <div class="refugios">
                     <a href="../pages/frey.html">
-            <img src="../multimedia/refugio-frey-bariloche.jpg" alt="frey" class="frey">
+            <img src="../multimedia/refugio-frey-bariloche.jpg" data-aos="flip-up" alt="frey" class="frey">
         </a>
         <a href="../pages/jakob.html">
-            <img src="../multimedia/jakob.jpg" alt="jakob" class="jakob">
+            <img src="../multimedia/jakob.jpg" alt="jakob" data-aos="flip-up" class="jakob">
         </a>
         <a href="../pages/hielo-azul.html">
-            <img src="../multimedia/Refugio-hielo-azul-2_11zon.webp" alt="hielo-azul" class="hielo">
+            <img src="../multimedia/Refugio-hielo-azul-2_11zon.webp" data-aos="flip-up" alt="hielo-azul" class="hielo">
         </a>
         <a href="../pages/casadecampo.html">
-            <img src="../multimedia/PARA LOGO CASA.jpg" alt="casa-de-campo" class="casa">
+            <img src="../multimedia/PARA LOGO CASA.jpg" alt="casa-de-campo" data-aos="flip-up" class="casa">
         </a>
         </div>
         </header>
@@ -46,14 +46,14 @@ Durante el invierno y parte de la primavera, el refugio se ha convertido tambié
             El refugio se encuentra abierto todo el año. Los servicios que se ofrecen incluyen pernocte, media pensión y pensión completa, con opciones de platos vegetarianos, veganos y una variedad de bebidas y vinos. 
         </p>
         </div class="imagenes-frey">
-            <img src="../multimedia/FREY1.webp" alt="frey1" class="a">
-            <img src="../multimedia/FREY2.jpg" alt="frey2" class="b"> 
-            <img src="../multimedia/FREY3.webp" alt="frey3" class="c">
-            <img src="../multimedia/FREY4.webp" alt="frey4" class="d">
-            <img src="../multimedia/FREY5.jpg" alt="frey5" class="e">
-            <img src="../multimedia/FREY 6.webp" alt="frey6" class="f">
-            <img src="../multimedia/el-refugio.webp" alt="frey7" class="g">
-            <img src="../multimedia/FREY8.jpg" alt="frey8" class="h">
+            <img src="../multimedia/FREY1.webp" data-aos="fade-right" alt="frey1" class="a">
+            <img src="../multimedia/FREY2.jpg" data-aos="fade-left" alt="frey2" class="b"> 
+            <img src="../multimedia/FREY3.webp" data-aos="zoom-in" alt="frey3" class="c">
+            <img src="../multimedia/FREY4.webp" data-aos="zoom-in" alt="frey4" class="d">
+            <img src="../multimedia/FREY5.jpg"  data-aos="zoom-in" alt="frey5" class="e">
+            <img src="../multimedia/FREY 6.webp" data-aos="zoom-in" alt="frey6" class="f">
+            <img src="../multimedia/el-refugio.webp"  data-aos="zoom-in" alt="frey7" class="g">
+            <img src="../multimedia/FREY8.jpg" data-aos="zoom-in" alt="frey8" class="h">
         </div>
     </main>
 
@@ -69,5 +69,9 @@ Durante el invierno y parte de la primavera, el refugio se ha convertido tambié
         </div>
     </footer>
 </section>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+        AOS.init();
+</script>
 </body>
 </html>
