--- a/pages/hielo-azul.html
+++ b/pages/hielo-azul.html
@@ -6,28 +6,29 @@
     , initial-scale=1.0">
     <title>HIELO AZUL</title>
     <link rel="stylesheet" href="../styles/styles.css">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <a href="../index.html">
-            <img src="../multimedia/pa proyecto img.jpg" alt="logo" class="logo">
+            <img src="../multimedia/LOGO2.jpg" data-aos="flip-up" alt="logo" class="logo">
         </a>
     
             <h1>
-            <img src="../multimedia/portadin.png" alt="">
+            <img src="../multimedia/portadin.png" data-aos="flip-up" alt="">
         </h1>
     <div class="refugios">
         <a href="../pages/frey.html">
-            <img src="../multimedia/refugio-frey-bariloche.jpg" alt="frey" class="frey">
+            <img src="../multimedia/refugio-frey-bariloche.jpg" data-aos="flip-up" alt="frey" class="frey">
         </a>
         <a href="../pages/jakob.html">
-            <img src="../multimedia/jakob.jpg" alt="jakob" class="jakob">
+            <img src="../multimedia/jakob.jpg" data-aos="flip-up" alt="jakob" class="jakob">
         </a>
         <a href="../pages/hielo-azul.html">
-            <img src="../multimedia/Refugio-hielo-azul-2_11zon.webp" alt="hielo-azul" class="hielo">
+            <img src="../multimedia/Refugio-hielo-azul-2_11zon.webp" data-aos="flip-up" alt="hielo-azul" class="hielo">
         </a>
         <a href="../pages/casadecampo.html">
-            <img src="../multimedia/PARA LOGO CASA.jpg" alt="casa-de-campo" class="casa">
+            <img src="../multimedia/PARA LOGO CASA.jpg" alt="casa-de-campo" data-aos="flip-up" class="casa">
         </a>
     </div>
 
@@ -40,14 +41,14 @@
 
     <main>
         <div class="imagenes-hielo">
-        <img src="../multimedia/hielo1.jpeg" alt="hielo1" class="p item">
-        <img src="../multimedia/hielo2.webp" alt="hielo2" class="q item"> 
-        <img src="../multimedia/hielo3.jpg" alt="hielo3" class="r item">
-        <img src="../multimedia/hielo4.webp" alt="hielo4" class="s item">
-        <img src="../multimedia/hielo5.jpg" alt="hielo5" class="t item">
-        <img src="../multimedia/hielo6.jpeg" alt="hielo6" class="u item">
-        <img src="../multimedia/hielo7.jpg" alt="hielo7" class="v item">
-        <img src="../multimedia/hielo8.webp" alt="hielo8" class="w item">
+        <img src="../multimedia/hielo1.jpeg" data-aos="zoom-in-up" alt="hielo1" class="p item">
+        <img src="../multimedia/hielo2.webp" data-aos="zoom-in-up" alt="hielo2" class="q item"> 
+        <img src="../multimedia/hielo3.jpg" data-aos="zoom-in-up" alt="hielo3" class="r item">
+        <img src="../multimedia/hielo4.webp" data-aos="zoom-in-up" alt="hielo4" class="s item">
+        <img src="../multimedia/hielo5.jpg"  data-aos="zoom-in-up"alt="hielo5" class="t item">
+        <img src="../multimedia/hielo6.jpeg" data-aos="zoom-in-up" alt="hielo6" class="u item">
+        <img src="../multimedia/hielo7.jpg"  data-aos="zoom-in-up"alt="hielo7" class="v item">
+        <img src="../multimedia/hielo8.webp" data-aos="zoom-in-up" alt="hielo8" class="w item">
         </div>
     </main>
     <footer>
@@ -62,5 +63,9 @@
     </div>
     </footer>
 
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+        AOS.init();
+</script>
 </body>
 </html>
