--- a/pages/jakob.html
+++ b/pages/jakob.html
@@ -5,27 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JAKOB</title>
     <link rel="stylesheet" href="../styles/styles.css">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <a href="../index.html">
-            <img src="../multimedia/pa proyecto img.jpg" alt="logo" class="logo">
+            <img src="../multimedia/LOGO2.jpg" data-aos="flip-up" alt="logo" class="logo">
         </a>
             <h1>
-            <img src="../multimedia/LOGO JAKOV PNG.png" alt="logojakov">
+            <img src="../multimedia/LOGO JAKOV PNG.png" data-aos="flip-up" alt="logojakov">
         </h1>
         <div class="refugios">
         <a href="../pages/frey.html">
-            <img src="../multimedia/refugio-frey-bariloche.jpg" alt="frey" class="frey">
+            <img src="../multimedia/refugio-frey-bariloche.jpg" data-aos="flip-up" alt="frey" class="frey">
         </a>
         <a href="../pages/jakob.html">
-            <img src="../multimedia/jakob.jpg" alt="jakob" class="jakob">
+            <img src="../multimedia/jakob.jpg" data-aos="flip-up" alt="jakob" class="jakob">
         </a>
         <a href="../pages/hielo-azul.html">
-            <img src="../multimedia/Refugio-hielo-azul-2_11zon.webp" alt="hielo-azul" class="hielo">
+            <img src="../multimedia/Refugio-hielo-azul-2_11zon.webp" data-aos="flip-up" alt="hielo-azul" class="hielo">
         </a>
         <a href="../pages/casadecampo.html">
-            <img src="../multimedia/PARA LOGO CASA.jpg" alt="casa-de-campo" class="casa">
+            <img src="../multimedia/PARA LOGO CASA.jpg" data-aos="flip-up" alt="casa-de-campo" class="casa">
         </a>
         </div>
         <div class="infojakob">
@@ -39,14 +40,14 @@ Al mismo se puede llegar en auto (hay estacionamiento pago en el lugar) o en col
     </header>
 <main>
     <div class="imagenes-jakob">
-    <img src="../multimedia/jakov1.jpg" alt="frey1" class="i">
-        <img src="../multimedia/jakov2.jpg" alt="frey2" class="j"> 
-        <img src="../multimedia/jakov3.jpg" alt="frey3" class="k">
-        <img src="../multimedia/jakov4.jpg" alt="frey4" class="l">
-        <img src="../multimedia/jakov5.jpeg" alt="frey5" class="m">
-        <img src="../multimedia/jakov6.jpg" alt="frey6" class="n">
-        <img src="../multimedia/jakov7.jpg" alt="frey7" class="ñ">
-        <img src="../multimedia/jakov8.jpg" alt="frey8" class="o">
+    <img src="../multimedia/jakov1.jpg" data-aos="zoom-in" alt="frey1" class="i">
+        <img src="../multimedia/jakov2.jpg" data-aos="zoom-in" alt="frey2" class="j"> 
+        <img src="../multimedia/jakov3.jpg" data-aos="zoom-in" alt="frey3" class="k">
+        <img src="../multimedia/jakov4.jpg" data-aos="zoom-in" alt="frey4" class="l">
+        <img src="../multimedia/jakov5.jpeg" data-aos="zoom-in" alt="frey5" class="m">
+        <img src="../multimedia/jakov6.jpg" data-aos="zoom-in" alt="frey6" class="n">
+        <img src="../multimedia/jakov7.jpg" data-aos="zoom-in" alt="frey7" class="ñ">
+        <img src="../multimedia/jakov8.jpg" data-aos="zoom-in" alt="frey8" class="o">
     </div>
 </main>
 
@@ -61,5 +62,10 @@ Al mismo se puede llegar en auto (hay estacionamiento pago en el lugar) o en col
     </a>
     </div>
 </footer>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+        AOS.init();
+</script>
 </body>
 </html>
