--- a/index.html
+++ b/index.html
@@ -6,27 +6,28 @@
     <title>RefugiANDES</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header>
     <a href="./index.html">
-        <img src="./multimedia/LOGO2.jpg" alt="logo" class="logo">
+        <img src="./multimedia/LOGO2.jpg" data-aos="flip-up" alt="logo" class="logo">
     </a>
         <h1>
-        <img src="./multimedia/Adobe Express - file.png" alt="banner" class="banner mx-auto d-block img-fluid">
+        <img src="./multimedia/Adobe Express - file.png" data-aos="flip-up" alt="banner" class="banner mx-auto d-block img-fluid">
     </h1>
 <div class="refugios">
         <a href="./pages/frey.html">
-        <img src="./multimedia/refugio-frey-bariloche.jpg" alt="frey" class="frey">
+        <img src="./multimedia/refugio-frey-bariloche.jpg" data-aos="flip-up" alt="frey" class="frey">
     </a>
     <a href="./pages/jakob.html">
-        <img src="./multimedia/jakob.jpg" alt="jakob" class="jakob">
+        <img src="./multimedia/jakob.jpg" data-aos="flip-up" alt="jakob" class="jakob">
     </a>
     <a href="./pages/hielo-azul.html">
-        <img src="./multimedia/Refugio-hielo-azul-2_11zon.webp" alt="hielo-azul" class="hielo">
+        <img src="./multimedia/Refugio-hielo-azul-2_11zon.webp" data-aos="flip-up" alt="hielo-azul" class="hielo">
     </a>
     <a href="./pages/casadecampo.html">
-        <img src="./multimedia/PARA LOGO CASA.jpg" alt="casa-de-campo" class="casa">
+        <img src="./multimedia/PARA LOGO CASA.jpg" data-aos="flip-up" alt="casa-de-campo" class="casa">
     </a>
 </div>
     </header>
@@ -124,5 +125,9 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+        AOS.init();
+</script>
 </body>
 </html>
